# thesis-metadrive

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.hydra/: config.yaml  hydra.yaml  overrides.yaml
analysis/: README.md  __init__.py  aggregate_runs.py  common_stats.py  make_curriculum_tables.py  make_final_tables.py  make_plots.py  make_rulebook_tables.py  render_selected_videos.py  run_analysis.py  select_video_episodes.py
conf/: baseline_td3_rulebook_curr.yaml  baseline_td3_scalar_def_curr.yaml  baseline_td3_scalar_def_no_curr.yaml  config.yaml  td3_rulebook_curr.yaml  td3_scalar_def_curr.yaml  td3_scalar_def_no_curr.yaml
conf/adapter/: direct_action.yaml  neural_adapter.yaml  policy_adapter.yaml
conf/agent/: td3.yaml
conf/curriculum/: disabled.yaml  stages.yaml
conf/env/: metadrive.yaml  metadrive_base.yaml
docs/: algorithm_comparison_protocol.md  architecture.md  csv_evaluation_objectives.md  hydra_config_strategy.md  implementation_plan.md  initial_design_decisions.md  metadrive_assumptions.md  open_questions.md  validation_commands.md
tests/: test_agent_pipeline.py  test_curriculum_manager.py  test_direct_action_adapter.py  test_hydra_preset_run_configs.py  test_hydra_preset_test_configs.py  test_identity_preprocessor.py  test_imports_and_contracts.py  test_neural_adapter.py  test_planner_lifecycle.py  test_policy_adapter.py  test_reward_manager.py  test_reward_runtime_wiring.py  test_reward_wrapper.py  test_rulebook_evaluator.py  test_train_curriculum_helpers.py
(+171 files in other folders)
